--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,7 +1,7 @@
 $primary: #1478c8;
 $black: #0f0f0f;
 $dark: #202020;
-$white: #f2f2f2;
-$light: #e0e0e0;
+$white: #f4f4f4;
+$light: #dfdfdf;
 
 @import "bootstrap/scss/bootstrap";
